<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/fragment_registration"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        style="@style/title_main_white"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="61dp"
        android:gravity="center"
        android:text="@string/title_register"
        android:textColor="@color/colorTextIcons"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_fname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="31dp"
        android:background="@drawable/edittext_bg_fine"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <EditText
        android:id="@+id/txt_lastname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default_half"
        android:background="@drawable/edittext_bg_fine"
        android:ems="10"
        android:hint="@string/hint_lastname"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fname" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default_half"
        android:background="@drawable/edittext_bg_fine"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lastname" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default_half"
        android:background="@drawable/edittext_bg_fine"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/txt_confirmpass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default_half"
        android:background="@drawable/edittext_bg_fine"
        android:ems="10"
        android:hint="@string/hint_confirm"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <Button
        android:id="@+id/btn_register"
        style="@style/buttons_main"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="77dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default_half"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirmpass"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_login"
        style="@style/title_sub_white"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default_half"
        android:gravity="center"
        android:text="@string/back_login"
        android:textColor="@color/colorTextIcons"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.555" />

</android.support.constraint.ConstraintLayout>
