<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/fragment_login"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="263dp"
        android:layout_height="81dp"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginTop="56dp"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default" />

    <TextView
        android:id="@+id/text_title"
        style="@style/title_main_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:gravity="center"
        android:text="@string/app_name_title"
        android:textColor="@color/colorTextIcons"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="31dp"
        android:background="@drawable/edittext_bg_fine"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default_half"
        android:background="@drawable/edittext_bg_fine"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <Button
        android:id="@+id/btn_login"
        style="@style/buttons_main"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default_half"
        android:background="@drawable/buttons"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_signup"
        style="@style/title_sub_white"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/padding_default"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:gravity="center_vertical"
        android:text="@string/signup"
        android:textColor="@color/colorTextIcons"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default" />

</android.support.constraint.ConstraintLayout>
